blog section + CSS file fix

--- a/Desktop/CSS/styles.css
+++ b/Desktop/CSS/styles.css
@@ -31,7 +31,7 @@ img {
 }
 
 .feature-content-title {
-    padding: 0 2px;
+    padding: 0 20px;
     text-align: left;
 }
 
@@ -58,9 +58,70 @@ p {
     padding: 10px 30px;
     text-transform: capitalize;
     transition: all 0.3s ease;
+    color: white;
+    text-decoration: none;
 }
 
 .green-btn {
     background: #178a27;
 }
 
+.blue-text {
+    color: #1686c1;
+}
+
+h2 {
+    font-size: 20px;
+    font-weight: 700;
+    color: #666;
+}
+
+.blue-btn {
+    background-color: #1686c1;
+}
+
+.red-bth {
+    background-color: #852406;
+}
+
+body {
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+}
+
+
+.img-wrap {
+    position: relative;
+  }
+
+  .img-wrap h1 h4 {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+  }
+
+  .blog-content {
+      background: #f2f2f2;
+      padding-bottom: 25px;
+      max-width: 555px;
+      margin: 0 auto;
+  }
+
+  .blog-content span a {
+      background: #fff none repeat scroll 0 0;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      color: #666;
+      font-size: 18px;
+      padding: 10px 30px;
+      text-decoration: none;
+      text-transform: capitalize;
+  }
+
+.about-section {
+    height: 100%;
+    padding-top: 70px;
+}
